# dealshunter

./: .gitignore  .nvmrc  README.md  index.html  package-lock.json  package.json  playwright.config.ts  schema_raw.sql  tailwind.config.js  tsconfig.node.json  tsconfig.server.json  vite.config.ts  vitest.config.ts  wrangler.toml
scraping/: add_size_groups_to_variants.py  get_shopify_collections.py  get_shopify_collections_to_products.py  get_shopify_products.py  map_product_to_taxonomy.py  pyproject.toml  refresh.py  requirements.txt  run.py  scrape_and_upload_all.py  scrape_and_upload_app.py  session.py  shop_urls.json  test_map_product_to_taxonomy.py  upload_products_to_supabase.py  upload_shopify_collections.py  upload_shopify_collections_to_products.py  upload_shopify_products.py  upload_shops.py
scraping/config/: pipeline.json  product_filters.json  product_type_loader.py  product_types.json  schemas.py  settings.py  shop_urls.json
scraping/core/: cache_manager.py  file_manager.py  logger.py  rate_limiter.py  session_manager.py  state_manager.py
scraping/orchestrator/: main.py
scraping/processors/: size_group_processor.py  taxonomy_processor.py
scraping/scrapers/: base_scraper.py  collection_products_scraper.py  collection_scraper.py  product_scraper.py  shop_scraper.py
scraping/taxonomy_cache/: taxonomy.json  taxonomy_2025-03.json  taxonomy_progress.json
scraping/uploader/: base_uploader.py  collection_product_uploader.py  collection_uploader.py  data_processor.py  db_client.py  product_categorizer.py  product_uploader.py  recategorize_products.py  (+2 more)
(+60 files in other folders)
